Fix md-card margin on mobile

--- a/src/main/webapp/assets/styles/fdz.css
+++ b/src/main/webapp/assets/styles/fdz.css
@@ -1543,53 +1543,47 @@ md-slider-container[disabled] > *:last-child:not(md-slider) {
 .fdz-theme .md-calendar-month-label md-icon {
   color: black; }
 
-.fdz-theme .fdz-search-result a {
-  color: #0071bc;
-  cursor: pointer; }
-
-.fdz-theme .fdz-search-result a:focus {
-  outline-color: #f7a839; }
-
-.fdz-theme .fdz-search-result md-card-header md-card-header-text,
-.fdz-theme .fdz-search-result md-card-header md-card-header-text .md-title,
-.fdz-theme .fdz-search-result md-card-header md-card-header-text .md-subhead > * {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; }
-
-.fdz-theme .fdz-search-result .md-subhead {
-  display: flex;
-  flex-flow: wrap;
-  justify-content: space-between; }
-
-.fdz-theme .fdz-search-result .md-subhead.left {
-  justify-content: flex-start; }
-
-.fdz-theme .fdz-search-result md-card-content {
-  padding: 8px 0 0 0;
-  text-align: justify; }
-  .fdz-theme .fdz-search-result md-card-content .btn-link {
-    font-weight: 400;
+.fdz-theme .fdz-search-result {
+  margin-bottom: 8px; }
+  .fdz-theme .fdz-search-result a {
     color: #0071bc;
-    border-radius: 0; }
-    .fdz-theme .fdz-search-result md-card-content .btn-link:focus {
-      outline-color: #f7a839; }
-
-.fdz-theme .fdz-search-result md-card-actions > a {
-  margin: 0 8px 16px 8px; }
-
-.fdz-theme .fdz-search-result md-card-actionsr {
-  display: flex;
-  justify-content: flex-end;
-  margin: -16px 8px 8px 8px; }
-  .fdz-theme .fdz-search-result md-card-actionsr .md-button {
-    min-width: unset; }
-
-.fdz-theme .fdz-search-result .md-card-seach-action {
-  margin: 8px 0 0 0;
-  justify-content: flex-start; }
-  .fdz-theme .fdz-search-result .md-card-seach-action a {
-    margin: 0; }
+    cursor: pointer; }
+  .fdz-theme .fdz-search-result a:focus {
+    outline-color: #f7a839; }
+  .fdz-theme .fdz-search-result md-card-header md-card-header-text,
+  .fdz-theme .fdz-search-result md-card-header md-card-header-text .md-title,
+  .fdz-theme .fdz-search-result md-card-header md-card-header-text .md-subhead > * {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; }
+  .fdz-theme .fdz-search-result .md-subhead {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-between; }
+  .fdz-theme .fdz-search-result .md-subhead.left {
+    justify-content: flex-start; }
+  .fdz-theme .fdz-search-result md-card-content {
+    padding: 8px 0 0 0;
+    text-align: justify; }
+    .fdz-theme .fdz-search-result md-card-content .btn-link {
+      font-weight: 400;
+      color: #0071bc;
+      border-radius: 0; }
+      .fdz-theme .fdz-search-result md-card-content .btn-link:focus {
+        outline-color: #f7a839; }
+  .fdz-theme .fdz-search-result md-card-actions > a {
+    margin: 0 8px 16px 8px; }
+  .fdz-theme .fdz-search-result md-card-actionsr {
+    display: flex;
+    justify-content: flex-end;
+    margin: -16px 8px 8px 8px; }
+    .fdz-theme .fdz-search-result md-card-actionsr .md-button {
+      min-width: unset; }
+  .fdz-theme .fdz-search-result .md-card-seach-action {
+    margin: 8px 0 0 0;
+    justify-content: flex-start; }
+    .fdz-theme .fdz-search-result .md-card-seach-action a {
+      margin: 0; }
 
 .fdz-search-result__link {
   color: black;
